--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Final Year Project",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "cd src && nodemon app"
   },
   "repository": {
     "type": "git",
