--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "promject",
   "version": "1.0.0",
-  "description": "Final Year Project",
-  "main": "app.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "cd src && nodemon app"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -18,8 +18,13 @@
   },
   "homepage": "https://github.com/rakshit47/Promject#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.11.0"
+    "express": "^4.18.2",
+    "googleapis": "^112.0.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongodb": "^5.1.0",
+    "nodemailer": "^6.9.1"
   }
 }
